[gd_scene load_steps=4 format=3 uid="uid://uifnxfkxdlf8"]

[ext_resource type="Theme" uid="uid://dcmf725vhn78r" path="res://themes/sikil_light_theme.tres" id="1_jn16m"]
[ext_resource type="Script" uid="uid://d1mjv6s065mst" path="res://Managers/sectionButtonManager.gd" id="2_jn16m"]
[ext_resource type="Texture2D" uid="uid://bbnc31uuc1l5r" path="res://texture/defaults/agua_1l.jpg" id="3_jn16m"]

[node name="SectionButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1024.0
offset_bottom = -424.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("1_jn16m")
script = ExtResource("2_jn16m")

[node name="SectionButton" type="TextureButton" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 24.0
offset_right = 232.0
offset_bottom = 224.0

[node name="SectionImage" type="Sprite2D" parent="."]
position = Vector2(130.4, 122.4)
scale = Vector2(0.459375, 0.459375)
texture = ExtResource("3_jn16m")

[node name="SectionName" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 248.0
offset_right = 240.0
offset_bottom = 272.0
bbcode_enabled = true
text = "[b]SectionName[/b]"
fit_content = true
scroll_active = false

[node name="SectionDescription" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 272.0
offset_right = 240.0
offset_bottom = 295.0
scale = Vector2(0.695, 0.695)
bbcode_enabled = true
text = "Description"
scroll_active = false

[connection signal="pressed" from="SectionButton" to="." method="_on_section_button_pressed"]
